--- a/package.json
+++ b/package.json
@@ -8,14 +8,30 @@
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
-  "dependencies": {
-    "expo": "~47.0.8",
-    "expo-status-bar": "~1.4.2",
-    "react": "18.1.0",
-    "react-native": "0.70.5"
-  },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.9.4",
+    "babel-eslint": "^10.0.1",
+    "babel-plugin-inline-dotenv": "^1.7.0"
+  },
+  "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^6.0.14",
+    "@react-navigation/native-stack": "^6.9.2",
+    "@react-navigation/stack": "^6.3.5",
+    "base-64": "^1.0.0",
+    "expo": "~47.0.8",
+    "expo-constants": "~14.0.2",
+    "expo-status-bar": "~1.4.2",
+    "firebase": "^9.14.0",
+    "react": "18.1.0",
+    "react-native": "0.70.5",
+    "react-native-config": "^1.4.11",
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0"
   },
   "private": true
 }
